add session id + username security to some endpoints